feat: added ecg wave and other fix in patient info page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,7 +33,7 @@
         <div id="rfid-value"></div>
     
         <br>
-        <a href="patient_info.html" class="btn-get-started">Prescription</a>
+        <a href="/patient_info" class="btn-get-started">Prescription</a>
         <a href="add_patient.html" class="btn-get-started">Add Patient</a>
         <!-- Real-Time RFID Display -->
         
