--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 Department of Biomedical Engineering</h3>
             </div>
         </form>
-        <h5><img src="assets/login.gif" style="width: 300px;"><br><a href="login.html">Login</a></h5>
+        <h5><img src="assets/login.gif" style="width: 300px;"><br><a href="/login">Login</a></h5>
         <br>
         
     </section>
