--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,15 +52,16 @@
             });
     </script>
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
-                All Rights Reserved
+      <!-- ======= Footer ======= -->
+      <section>
+        <footer id="footer">
+            <div class="container">
+                <div class="copyright">
+                    &copy; Copyright <strong style="font-family: 'Eras ITC', sans-serif">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
+                    All Rights Reserved
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- End Footer -->
+        </footer></section>
+        <!-- End Footer -->
 </body>
 </html>
