--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
     </header>
 
     <section id="login">
-        <form id="loginForm" action="/login" method="post">
+        <!-- <form id="loginForm" action="/login" method="post">
             <div>
                 <h3><img src="assets/img/SGSITS.png" alt="logo for sgsits" style="width: 100px;">
                 <br>Shri Govindram Seksaria Institute of Technology and Science<br>
                 Department of Biomedical Engineering</h3>
             </div>
-        </form>
-        <h5><img src="assets/login.gif" style="width: 300px;"><br><a href="/login">Login</a></h5>
+        </form> -->
+        <h5><img src="assets/login.gif" style="width: 300px;"><br><h1><a href="/login">Login</a></h5></h1>
         <br>
         
     </section>
