--- a/templates/patient_info.html
+++ b/templates/patient_info.html
@@ -128,16 +128,17 @@ ex: (1) Dolo 650 mg X 5 Days (0-0-0),
         <div id="message"></div>
     </section>
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
-                All Rights Reserved
+      <!-- ======= Footer ======= -->
+      <section>
+        <footer id="footer">
+            <div class="container">
+                <div class="copyright">
+                    &copy; Copyright <strong style="font-family: 'Eras ITC', sans-serif">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
+                    All Rights Reserved
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- End Footer -->
+        </footer></section>
+        <!-- End Footer -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
