--- a/templates/patient_info.html
+++ b/templates/patient_info.html
@@ -122,6 +122,7 @@ ex: (1) Dolo 650 mg X 5 Days (0-0-0),
                         <input type="text" id="newPrescription" name="newPrescription" required><br>
                         <button type="submit">Update Prescription</button>
                     </form>
+                    <div id="message"></div>
                 
             </ul>
             <br>
@@ -181,6 +182,10 @@ ex: (1) Dolo 650 mg X 5 Days (0-0-0),
             })
             .then(data => {
                 document.getElementById('message').textContent = data.success ? 'Prescription updated successfully' : 'Failed to update prescription';
+                // Open a pop-up window upon successful prescription update
+                if (data.success) {
+                    window.open('/popup', 'Prescription Updated', 'width=400,height=300');
+                }
             })
             .catch(error => {
                 console.error('Error:', error);
@@ -188,7 +193,7 @@ ex: (1) Dolo 650 mg X 5 Days (0-0-0),
             });
         });
     </script>
-
+    
 <script>
     var uids = [
         'Mohit Jha => 17 36 D5 5B',
